--- a/app/src/main/res/layout/activity_questionnaire_creation.xml
+++ b/app/src/main/res/layout/activity_questionnaire_creation.xml
@@ -256,7 +256,7 @@
             android:layout_gravity="bottom"
             android:layout_weight="1"
             android:background="@drawable/button_cancel_green_rounded_corners"
-            android:onClick="handleBtnNext"
+            android:onClick="handleBtnCancel"
             android:text="Cancel" />
 
         <Button
@@ -266,6 +266,7 @@
             android:layout_gravity="bottom"
             android:layout_weight="1"
             android:background="@drawable/button_next_green_rounded_corners"
+            android:onClick="handleBtnNext"
             android:text="Next" />
     </LinearLayout>
 
