--- a/app/src/main/res/layout/activity_qit.xml
+++ b/app/src/main/res/layout/activity_qit.xml
@@ -42,10 +42,11 @@
             android:layout_gravity="bottom|right"
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="20dp"
-            android:src="@drawable/facebook"
+            android:src="@drawable/ic_add_white_24dp"
             app:fab_elevationCompat="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="20dp" />
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v4.widget.DrawerLayout>
