--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,9 @@
 
     <color name="colorLogInButton">#20f25f</color>
 
+    <!--EDITED CUSTOM COLORS -->
+    <color name="colorDarkBlue">#0e6996</color>
+    <color name="colorLightBlue">#2daae1</color>
+    <color name="colorGreen">#3aaa35</color>
+    <color name="colorRed">#ff0000</color>
 </resources>
