--- a/app/src/main/res/layout/activity_qit.xml
+++ b/app/src/main/res/layout/activity_qit.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -52,6 +53,22 @@
             app:layout_constraintEnd_toEndOf="parent">
 
         </com.github.clans.fab.FloatingActionButton>
+
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/funnyGif"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.777"
+            android:src="@drawable/giphy"/>
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v4.widget.DrawerLayout>
