--- a/app/src/main/res/layout/activity_questionnaire_creation.xml
+++ b/app/src/main/res/layout/activity_questionnaire_creation.xml
@@ -85,214 +85,223 @@
         android:background="@color/cardview_shadow_start_color"
         app:layout_constraintTop_toBottomOf="@+id/tilDescription" />
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="300dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/llUnderSroll"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
             <LinearLayout
+                android:id="@+id/llUnderSroll"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="fill_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="20dp"
-                android:paddingRight="32dp"
-                android:paddingTop="32dp">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_margin="2dp"
-                    app:srcCompat="@drawable/ic_vpn_key_black_36dp" />
-
-                <TextView
-                    android:id="@+id/tvIsPassword"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="2dp"
-                    android:layout_weight="1"
-                    android:drawablePadding="12dp"
-                    android:text="@string/creation_is_password"
-                    android:textColor="@color/colorAuthHintText"
-                    android:textSize="18sp" />
+                    android:gravity="fill_vertical"
+                    android:orientation="horizontal"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="32dp"
+                    android:paddingTop="32dp"
+                    android:visibility="gone">
 
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/switchPassword"
-                    android:layout_width="wrap_content"
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_margin="2dp"
+                        app:srcCompat="@drawable/ic_vpn_key_black_36dp" />
+
+                    <TextView
+                        android:id="@+id/tvIsPassword"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="2dp"
+                        android:layout_weight="1"
+                        android:drawablePadding="12dp"
+                        android:text="@string/creation_is_password"
+                        android:textColor="@color/colorAuthHintText"
+                        android:textSize="18sp" />
+
+                    <android.support.v7.widget.SwitchCompat
+                        android:id="@+id/switchPassword"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:shadowColor="@color/colorGreen"
+                        android:theme="@style/QITSwitch" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:shadowColor="@color/colorGreen"
-                    android:theme="@style/QITSwitch" />
+                    android:gravity="fill_vertical"
+                    android:orientation="horizontal"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="32dp"
+                    android:paddingTop="15dp">
 
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_margin="2dp"
+                        app:srcCompat="@drawable/ic_date_range_black_36dp" />
+
+                    <TextView
+                        android:id="@+id/tvStartDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="2dp"
+                        android:layout_weight="1"
+                        android:drawablePadding="18dp"
+                        android:text="@string/creation_start_date"
+                        android:textColor="@color/colorAuthHintText"
+                        android:textSize="18sp" />
+
+                    <android.support.v7.widget.SwitchCompat
+                        android:id="@+id/switchStartDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:shadowColor="@color/colorGreen"
+                        android:theme="@style/QITSwitch" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="fill_vertical"
+                    android:orientation="horizontal"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="32dp"
+                    android:paddingTop="15dp">
+
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_margin="2dp"
+                        app:srcCompat="@drawable/ic_date_range_black_36dp" />
+
+                    <TextView
+                        android:id="@+id/tvEndDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="2dp"
+                        android:layout_weight="1"
+                        android:drawablePadding="18dp"
+                        android:text="@string/creation_end_date"
+                        android:textColor="@color/colorAuthHintText"
+                        android:textSize="18sp" />
+
+                    <android.support.v7.widget.SwitchCompat
+                        android:id="@+id/switchEndDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:shadowColor="@color/colorGreen"
+                        android:theme="@style/QITSwitch" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="fill_vertical"
+                    android:orientation="horizontal"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="32dp"
+                    android:paddingTop="15dp">
+
+                    <ImageView
+                        android:id="@+id/imageView4"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_margin="2dp"
+                        app:srcCompat="@drawable/ic_hot_tub_black_36dp" />
+
+                    <TextView
+                        android:id="@+id/tvIsAnonymity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="2dp"
+                        android:layout_weight="1"
+                        android:drawablePadding="18dp"
+                        android:text="@string/creation_is_anonymity"
+                        android:textColor="@color/colorAuthHintText"
+                        android:textSize="18sp" />
+
+                    <android.support.v7.widget.SwitchCompat
+                        android:id="@+id/switchIsAnonymity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:shadowColor="@color/colorGreen"
+                        android:theme="@style/QITSwitch" />
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="fill_vertical"
+                    android:orientation="horizontal"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="32dp"
+                    android:paddingTop="15dp">
+
+                    <ImageView
+                        android:id="@+id/imageView5"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_margin="2dp"
+                        app:srcCompat="@drawable/ic_reorder_black_36dp" />
+
+                    <TextView
+                        android:id="@+id/tvAnswersLimit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="2dp"
+                        android:layout_weight="1"
+                        android:drawablePadding="18dp"
+                        android:text="@string/creation_answers_limit"
+                        android:textColor="@color/colorAuthHintText"
+                        android:textSize="18sp" />
+
+                    <android.support.v7.widget.SwitchCompat
+                        android:id="@+id/switchAnswersLimit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:shadowColor="@color/colorGreen"
+                        android:theme="@style/QITSwitch" />
+
+                </LinearLayout>
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="fill_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="20dp"
-                android:paddingRight="32dp"
-                android:paddingTop="15dp">
-
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_margin="2dp"
-                    app:srcCompat="@drawable/ic_date_range_black_36dp" />
-
-                <TextView
-                    android:id="@+id/tvStartDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="2dp"
-                    android:layout_weight="1"
-                    android:drawablePadding="18dp"
-                    android:text="@string/creation_start_date"
-                    android:textColor="@color/colorAuthHintText"
-                    android:textSize="18sp" />
-
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/switchStartDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:shadowColor="@color/colorGreen"
-                    android:theme="@style/QITSwitch" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="fill_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="20dp"
-                android:paddingRight="32dp"
-                android:paddingTop="15dp">
-
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_margin="2dp"
-                    app:srcCompat="@drawable/ic_date_range_black_36dp" />
-
-                <TextView
-                    android:id="@+id/tvEndDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="2dp"
-                    android:layout_weight="1"
-                    android:drawablePadding="18dp"
-                    android:text="@string/creation_end_date"
-                    android:textColor="@color/colorAuthHintText"
-                    android:textSize="18sp" />
-
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/switchEndDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:shadowColor="@color/colorGreen"
-                    android:theme="@style/QITSwitch" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="fill_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="20dp"
-                android:paddingRight="32dp"
-                android:paddingTop="15dp">
-
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_margin="2dp"
-                    app:srcCompat="@drawable/ic_hot_tub_black_36dp" />
-
-                <TextView
-                    android:id="@+id/tvIsAnonymity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="2dp"
-                    android:layout_weight="1"
-                    android:drawablePadding="18dp"
-                    android:text="@string/creation_is_anonymity"
-                    android:textColor="@color/colorAuthHintText"
-                    android:textSize="18sp" />
-
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/switchIsAnonymity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:shadowColor="@color/colorGreen"
-                    android:theme="@style/QITSwitch" />
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="fill_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="20dp"
-                android:paddingRight="32dp"
-                android:paddingTop="15dp">
-
-                <ImageView
-                    android:id="@+id/imageView5"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_margin="2dp"
-                    app:srcCompat="@drawable/ic_reorder_black_36dp" />
-
-                <TextView
-                    android:id="@+id/tvAnswersLimit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="2dp"
-                    android:layout_weight="1"
-                    android:drawablePadding="18dp"
-                    android:text="@string/creation_answers_limit"
-                    android:textColor="@color/colorAuthHintText"
-                    android:textSize="18sp" />
-
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/switchAnswersLimit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:shadowColor="@color/colorGreen"
-                    android:theme="@style/QITSwitch" />
-
-            </LinearLayout>
-        </LinearLayout>
-
-    </ScrollView>
+        </ScrollView>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:gravity="bottom">
 
         <TextView
             android:id="@+id/btnCancel"
