--- a/app/src/main/res/layout/item_message_received.xml
+++ b/app/src/main/res/layout/item_message_received.xml
@@ -3,6 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/messageLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -11,7 +12,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         tools:layout_editor_absoluteY="8dp">
 
         <TextView
@@ -23,12 +24,24 @@
             android:text="John Doe"
             android:textSize="12sp"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/text_message_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_weight="1"
+            android:text="11:40"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="@+id/text_message_body"
+            app:layout_constraintLeft_toRightOf="@+id/text_message_body" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         tools:layout_editor_absoluteY="8dp">
 
         <TextView
@@ -45,16 +58,6 @@
             android:textColor="#ffffff"
             app:layout_constraintTop_toBottomOf="@+id/text_message_name" />
 
-        <TextView
-            android:id="@+id/text_message_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:layout_weight="1"
-            android:text="11:40"
-            android:textSize="10sp"
-            app:layout_constraintBottom_toBottomOf="@+id/text_message_body"
-            app:layout_constraintLeft_toRightOf="@+id/text_message_body" />
     </LinearLayout>
 
 </LinearLayout>
